# forjate

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  init-tenant.py  pyproject.toml
.ait/: .ignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: sync-app-image.yml
docs/: architecture-overview.md  business-overview.md  ci-write-back-integration.md  create_users.md  release-process.md  service-integration.md  storage-strategy.md  traefik-update-workflow.md
docs/apps/: affine.md  appflowy.md  argocd.md  cert-manager.md  debezium-mariadb-nats.md  debezium-mariadb-rabbitmq.md  debezium-mongo-nats.md  debezium-mongo-rabbitmq.md  debezium-postgres-nats.md  debezium-postgres-rabbitmq.md  docker-registry.md  docling.md  esphome.md  formbricks.md  gotrue-auth.md  hass.md  kubernetes-dashboard.md  lancedb.md  litellm.md  longhorn.md  mariadb.md  metallb.md  minio.md  mosquitto.md  n8n.md  nats.md  node-red.md  oauth2-proxy.md  ollama.md  open-webui.md  postgres.md  rabbitmq.md  sealed-secrets.md  traefik.md  vllm.md  whoami.md
docs/tenant-onboarding/: configuring-cdc.md  configuring-formbricks.md  configuring-litellm.md  (+4 more)
scripts/: add-app-to-overlay.sh  add-component-to-tenant.sh  convert-to-sealed-secret.sh  create-app-component.sh  create-base-feature.sh  create-local-component.sh  create-remote-component.sh  generate-kubeconfig.sh  gotrue-create-user.sh  init-cluster.env.example  init-cluster.sh  litellm-bootstrap.sh  rename-tenant-references.sh
(+339 files in other folders)
